<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/activity_dialog">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/taskDialog_edit_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/taskDialog_title"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/taskDialog_editText"
            android:inputType="textCapSentences"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/taskDialog_hint"
            android:textColor="#9E9E9E"
            app:layout_constraintTop_toBottomOf="@+id/taskDialog_edit_task"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/taskDialog_clearButton"/>

        <ImageButton
            android:id="@+id/taskDialog_clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:src="@drawable/ic_clear_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/taskDialog_edit_task" />

        <CheckBox
            android:id="@+id/taskDialog_startTime_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/taskDialog_editText"/>

        <TextView
            android:id="@+id/taskDialog_startTime_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:text="@string/set_start_time"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/taskDialog_startTime_checkbox"
            app:layout_constraintStart_toEndOf="@id/taskDialog_startTime_checkbox"
            app:layout_constraintTop_toBottomOf="@id/taskDialog_editText" />

        <CheckBox
            android:id="@+id/taskDialog_dailyTask_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/taskDialog_startTime_checkbox"/>

        <TextView
            android:id="@+id/taskDialog_dailyTask_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/set_as_daily_task"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/taskDialog_dailyTask_checkbox"
            app:layout_constraintStart_toEndOf="@id/taskDialog_dailyTask_checkbox"/>

        <Button
            android:id="@+id/taskDialog_advanced_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@null"
            android:drawableEnd="@drawable/ic_arrow_drop_down_icon"
            android:text="@string/advanced"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@id/taskDialog_dailyTask_textView"
            app:layout_constraintStart_toEndOf="@id/taskDialog_dailyTask_textView"/>

        <CheckBox
            android:id="@+id/taskDialog_weekday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDialog_dailyTask_textView"/>

        <TextView
            android:id="@+id/taskDialog_weekday_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/set_as_weekday_task"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/taskDialog_weekday_checkbox"
            app:layout_constraintStart_toEndOf="@id/taskDialog_weekday_checkbox"/>

        <CheckBox
            android:id="@+id/taskDialog_weekend_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/taskDialog_weekday_checkbox"/>

        <TextView
            android:id="@+id/taskDialog_weekend_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/set_as_weekend_task"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/taskDialog_weekend_checkbox"
            app:layout_constraintStart_toEndOf="@id/taskDialog_weekend_checkbox"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
